--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   desktop_window: ^0.4.0
+  window_manager: ^0.3.7
+  ##flutter_tex: ^4.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
